AI/ollama_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama
  name: ollama
  namespace: ai
spec:
  selector:
    app: ollama
  ports:
  - port: 11434
    name: http
    targetPort: http
  type: ClusterIP
