AI/tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: ai
  labels:
    app: tika
    app.kubernetes.io/component: tika
    app.kubernetes.io/name: tika
    app.kubernetes.io/part-of: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
      app.kubernetes.io/component: tika
      app.kubernetes.io/name: tika
      app.kubernetes.io/part-of: ai
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tika
        app.kubernetes.io/component: tika
        app.kubernetes.io/name: tika
        app.kubernetes.io/part-of: ai
    spec:
      containers:
      - name: tika
        image: apache/tika:3.1.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            protocol: TCP
            containerPort: 9998
        securityContext: {}
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tika
    app.kubernetes.io/component: tika
    app.kubernetes.io/name: tika
    app.kubernetes.io/part-of: ai
  name: tika
  namespace: ai
spec:
  selector:
    app: tika
    app.kubernetes.io/component: tika
    app.kubernetes.io/name: tika
    app.kubernetes.io/part-of: ai
  ports:
  - port: 9998
    name: http
    targetPort: 9998
  type: ClusterIP
